第 2 期：增加商品上下架状态 1. 添加sql语句     status INT DEFAULT 1 COMMENT '商品状态：1-上架，0-下架'。 2. 实体类，xml 添加上下架状态字段。 3. 修改对应页面展示上架商品的信息。

--- a/src/main/resources/templates/admin/detail.html
+++ b/src/main/resources/templates/admin/detail.html
@@ -36,6 +36,10 @@
 								<td th:text="${goods.gstore}"></td>
 							</tr>
 							<tr>
+								<th>商品状态</th>
+								<td th:text="${goods.status == 1 ? '上架' : '下架'}"></td>
+							</tr>
+							<tr>
 								<th>商品图片</th>
 								<td>
 									<img th:src="'images/' + ${goods.gpicture}"
