--- a/src/main/resources/templates/admin/selectGoods.html
+++ b/src/main/resources/templates/admin/selectGoods.html
@@ -57,6 +57,7 @@
 								<th>商品ID</th>
 								<th>商品名称</th>
 								<th>商品类型</th>
+								<th>商品状态</th>
 								<th>详情</th>
 								<th th:if="${act} == 'updateSelect'">操作</th>
 								<th th:if="${act} == 'deleteSelect'">操作</th>
@@ -65,6 +66,7 @@
 								<td th:text="${gds.id}"></td>
 								<td th:text="${gds.gname}"></td>
 								<td th:text="${gds.typename}"></td>
+								<td th:text="${gds.status == 1 ? '上架' : '下架'}"></td>
 								<td>
 									<a th:href="@{goods/detail(id=${gds.id},act=detail)}" target="_blank">详情</a>
 								</td>
@@ -76,7 +78,7 @@
 								</td>
 							</tr>
 							<tr th:if="${act} == 'select'">
-								<td colspan="4" align="right">
+								<td colspan="5" align="right">
 									<ul class="pagination">
 										<li><a>第<span th:text="${currentPage}" ></span>页</a></li>
 										<li><a>共<span th:text="${totalPage}" ></span>页</a></li>
@@ -92,7 +94,7 @@
 								</td>
 							</tr>
 							<tr th:if="${act} == 'updateSelect'">
-								<td colspan="5" align="right">
+								<td colspan="6" align="right">
 									<ul class="pagination">
 										<li><a>第<span th:text="${currentPage}" ></span>页</a></li>
 										<li><a>共<span th:text="${totalPage}" ></span>页</a></li>
@@ -108,7 +110,7 @@
 								</td>
 							</tr>
 							<tr th:if="${act} == 'deleteSelect'">
-								<td colspan="5" align="right">
+								<td colspan="6" align="right">
 									<ul class="pagination">
 										<li><a>第<span th:text="${currentPage}" ></span>页</a></li>
 										<li><a>共<span th:text="${totalPage}" ></span>页</a></li>
