--- a/src/main/resources/templates/user/header.html
+++ b/src/main/resources/templates/user/header.html
@@ -56,9 +56,8 @@
 			</li>
 		</ul>
 		</div>
-		<!-- ************************************************** -->
-		<!-- *************************************** -->
-		<div class="navbar navbar-default " role="navigation">
+		<!-- 商品分类导航栏 -->
+		<div class="navbar navbar-default" role="navigation" style="margin-top: 70px;">
 			<ul class="nav navbar-nav" style="padding-left: 50px;">
 				<li><a th:href="@{/}">首页</a></li>
 				<li th:each="gty:${goodsType}"><a th:href="'?tid=' + ${gty.id}"><span th:text="${gty.typename}"></span></a></li>
