--- a/src/main/resources/templates/admin/addGoods.html
+++ b/src/main/resources/templates/admin/addGoods.html
@@ -43,9 +43,9 @@
 			<div class="form-group has-success">
 				<label class="col-sm-2 col-md-2 control-label">商品库存</label>
 				<div class="col-sm-4 col-md-4">
-					<input type="number" class="form-control"
+					<input type="number" class="form-control" min="0"
 					 placeholder="请输入商品库存"
-					th:field="*{gstore}"/>
+					th:field="*{stock}"/>
 				</div>
 			</div>
 			<div class="form-group has-success">
