--- a/src/main/resources/templates/user/goodsDetail.html
+++ b/src/main/resources/templates/user/goodsDetail.html
@@ -31,38 +31,39 @@
 	<div th:include="user/header"></div>
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-6 col-md-3">
+			<div class="col-xs-12 col-sm-6 col-md-5">
 				<img
 					th:src="'images/' + ${goods.gpicture}"
-					style="height: 220px; width: 280px; display: block;">
+					style="height: 220px; width: 280px; display: block; margin: 20px auto;">
 			</div>
-			<div class="col-xs-6 col-md-3">
-				<p>商品名：<span th:text="${goods.gname}"></span></p>
-				<p>
-					商品折扣价：<span style="color: red;">&yen;
-						<span th:text="${goods.grprice}"></span>
-					</span>
-				</p>
-				<p>
-					商品原价：
-					<span class="text-dark" style="text-decoration: line-through;"> &yen;
-						<span th:text="${goods.goprice}"></span>
-					</span>
-				</p>
-				<p>
-					商品类型：<span th:text="${goods.typename}"></span>
-				</p>
-				<p>
-					库存：<span id="stock"  th:text="${goods.stock}"></span>
-				</p>
-				<p>
-					<input type="text" size="12" class="form-control" placeholder="请输入购买量" id="buyNumber" name="buyNumber"/>
-					<input type="hidden" name="gid" id="gid" th:value="${goods.id}"/>
-				</p>
-				<p>
-					<a href="javascript:putCart()" class="btn btn-success"
-						style="font-size: 10px;">加入购物车</a>
-				</p>
+			<div class="col-xs-12 col-sm-6 col-md-7">
+				<div style="padding: 20px;">
+					<p><strong>商品名：</strong><span th:text="${goods.gname}"></span></p>
+					<p>
+						<strong>商品折扣价：</strong><span style="color: red; font-size: 20px;">&yen;
+							<span th:text="${goods.grprice}"></span>
+						</span>
+					</p>
+					<p>
+						<strong>商品原价：</strong>
+						<span class="text-dark" style="text-decoration: line-through;"> &yen;
+							<span th:text="${goods.goprice}"></span>
+						</span>
+					</p>
+					<p>
+						<strong>商品类型：</strong><span th:text="${goods.typename}"></span>
+					</p>
+					<p>
+						<strong>库存：</strong><span id="stock"  th:text="${goods.stock}"></span>
+					</p>
+					<p>
+						<input type="text" size="12" class="form-control" placeholder="请输入购买量" id="buyNumber" name="buyNumber"/>
+						<input type="hidden" name="gid" id="gid" th:value="${goods.id}"/>
+					</p>
+					<p>
+						<a href="javascript:putCart()" class="btn btn-success">加入购物车</a>
+					</p>
+				</div>
 			</div>
 		</div>
 	</div>
