--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -16,23 +16,36 @@
 	       <h3 align="center">用户登录</h3>
 	   </div>
 		<br><br>
-		<form action="user/login" name="myform" method="post" th:object="${bUser}"  class="form-horizontal" role="form" >
+		
+		<!-- 错误/成功提示区域 -->
+		<div class="row">
+			<div class="col-sm-offset-2 col-sm-8">
+				<div th:if="${param.error}" class="alert alert-danger">
+					<strong>登录失败！</strong> 
+					<span th:if="${param.error == 'captcha'}">验证码错误</span>
+					<span th:if="${param.error == 'true'}">用户名或密码错误</span>
+				</div>
+				<div th:if="${param.logout}" class="alert alert-success">
+					<strong>已成功登出</strong>
+				</div>
+				<div th:if="${param.passwordChanged}" class="alert alert-success">
+					<strong>密码修改成功，请使用新密码登录</strong>
+				</div>
+			</div>
+		</div>
+		
+		<form action="user/securityLogin" name="myform" method="post" class="form-horizontal" role="form" >
 			<div class="form-group has-success">
 				<label class="col-sm-2 col-md-2 control-label">邮箱</label>
 				<div class="col-sm-4 col-md-4">
-					<input type="email" class="form-control"
-					 placeholder="请输入您的邮箱"
-					th:field="*{bemail}"/>
-					<span th:errors="*{bemail}"></span>
+					<input type="email" class="form-control" name="bemail" placeholder="请输入您的邮箱" required />
 				</div>
 			</div>
 		
 			<div class="form-group has-success">
 				  <label class="col-sm-2 col-md-2 control-label">密码</label>
 				  <div class="col-sm-4 col-md-4">
-		  				<input type="password" class="form-control"
-					 placeholder="请输入您的密码" th:field="*{bpwd}"/>
-					 <span th:errors="*{bpwd}"></span>
+		  				<input type="password" class="form-control" name="bpwd" placeholder="请输入您的密码" required />
 				  </div>
 			 </div>
 			 
@@ -41,8 +54,7 @@
 				  <div class="col-sm-4 col-md-4">
 				  		<table style="width: 100%">
 				  			<tr>
-				  				<td><input type="text" class="form-control"
-					 placeholder="请输入验证码" th:field="*{code}"/></td>
+				  				<td><input type="text" class="form-control" name="code" placeholder="请输入验证码" required /></td>
 					 			<td>
 					 				<img th:src="@{/validateCode}" id="mycode">
 					 			</td>
@@ -57,16 +69,9 @@
 			 
 			<div class="form-group">
 				<div class="col-sm-offset-2 col-sm-10">
-					<button type="submit"class="btn btn-success" >登录</button>
-					<button type="reset" class="btn btn-primary" >重置</button>
-				</div>
-			</div>
-			
-			<div class="form-group">
-				<div class="col-sm-offset-2 col-sm-10">
-					<font size="6" color="red">
-						<span th:text="${errorMessage }"></span>
-					</font>
+					<button type="submit" class="btn btn-success">登录</button>
+					<button type="reset" class="btn btn-primary">重置</button>
+					<a href="user/toRegister" class="btn btn-link">没有账号？去注册</a>
 				</div>
 			</div>
 		</form>
