第 6 期：增加管理员操作日志功能，基本功能实现完毕 1. 重构管理员表，更细粒度的管理员信息。 2. 添加日志表，对商品的“增删改”操作进行日志记录，实现方式为 aop + service。 3. 重构管理员注册，登录，密码BCrypt加密存储。

--- a/src/main/resources/templates/admin/addGoods.html
+++ b/src/main/resources/templates/admin/addGoods.html
@@ -11,7 +11,7 @@
 		<div class="bg-primary"  style="width:70%; height: 60px;padding-top: 0.5px;">
 	       <h3 align="center">添加商品</h3>
 	   </div><br>
-		<form th:action="@{/goods/addGoods?act=add}"
+		<form th:action="@{/goods/addGoods}"
 		 name="myform" method="post" 
 		 th:object="${goods}"  
 		 class="form-horizontal" 
