--- a/src/main/resources/templates/user/header.html
+++ b/src/main/resources/templates/user/header.html
@@ -2,74 +2,95 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>导航页</title>
-<base th:href="@{/}"><!-- 不用base就使用th:src="@{/js/jquery.min.js} -->
+<base th:href="@{/}">
 <!-- Bootstrap -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/custom.css" rel="stylesheet">
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<style type="text/css">
-     .carousel{
-         height: 200px;
-         background-color: #000;
-      }
-      .carousel .item{
-         height: 200px;
-         background-color: #000;
-      }
-      .carousel img{
-         width: 100%;
-      }
-</style>
 </head>
 <body>
-	<div class="container-fruid">
-		<div class="navbar navbar-default navbar-fixed-top" role="navigation"
-			style="padding-left: 30px;">
+	<!-- 顶部导航栏 -->
+	<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+		<div class="container-fluid">
+			<!-- 移动端导航切换按钮 -->
 			<div class="navbar-header">
-				<span class="navbar-brand">欢迎光临eBusiness</span>
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar">
+					<span class="sr-only">切换导航</span>
+					<span class="icon-bar" style="background-color: white;"></span>
+					<span class="icon-bar" style="background-color: white;"></span>
+					<span class="icon-bar" style="background-color: white;"></span>
+				</button>
+				<a class="navbar-brand" href="#">🛒 eBusiness</a>
 			</div>
-			<ul class="nav navbar-nav">
-				<li><a th:href="@{user/toRegister}">注册</a></li>
-				<li>
-					<a th:href="(${session.bUser} == null)?'user/toLogin':'#'" >
-						<span th:if="${session.bUser} == null" >
-							登录
-						</span>
-						<span th:if="${session.bUser} != null" >
-							欢迎<span th:text="${session.bUser.bemail}" ></span>
-						</span>
-					</a>
-				</li>
-				<li><a th:href="@{admin/toLogin}">后台</a></li>
-			</ul>
-		<ul class="nav navbar-nav navbar-right" style="padding-right: 30px;">
-			<li><a href="cart/userInfo">个人信息</a></li>
-			<li><a href="cart/selectCart">我的购物车</a></li>
-			<li><a href="cart/myOder">我的订单</a></li>
-			<li class="dropdown"><a href="##" data-toggle="dropdown"
-				class="dropdown-toggle">关于我们<span class="caret"></span></a>
-				<ul class="dropdown-menu">
-					<li><a href="##">联系我们</a></li>
-					<li><a href="##">投诉建议</a></li>
+			
+			<!-- 导航链接 -->
+			<div class="collapse navbar-collapse" id="main-navbar">
+				<ul class="nav navbar-nav">
+					<li><a th:href="@{user/toRegister}">📝 注册</a></li>
+					<li>
+						<a th:href="(${session.bUser} == null)?'user/toLogin':'#'" >
+							<span th:if="${session.bUser} == null">🔐 登录</span>
+							<span th:if="${session.bUser} != null">
+								👋 欢迎 <strong th:text="${session.bUser.bemail}"></strong>
+							</span>
+						</a>
+					</li>
+					<li><a th:href="@{admin/toLogin}">⚙️ 后台管理</a></li>
 				</ul>
-			</li>
-		</ul>
+				
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="cart/userInfo">👤 个人信息</a></li>
+					<li><a href="cart/selectCart">🛒 购物车</a></li>
+					<li><a href="cart/myOder">📦 我的订单</a></li>
+					<li class="dropdown">
+						<a href="#" data-toggle="dropdown" class="dropdown-toggle">
+							ℹ️ 关于我们 <span class="caret"></span>
+						</a>
+						<ul class="dropdown-menu">
+							<li><a href="#">📞 联系我们</a></li>
+							<li><a href="#">💬 投诉建议</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
 		</div>
-		<!-- 商品分类导航栏 -->
-		<div class="navbar navbar-default" role="navigation" style="margin-top: 70px;">
-			<ul class="nav navbar-nav" style="padding-left: 50px;">
-				<li><a th:href="@{/}">首页</a></li>
-				<li th:each="gty:${goodsType}"><a th:href="'?tid=' + ${gty.id}"><span th:text="${gty.typename}"></span></a></li>
-			</ul>
-			<form action="search" class="navbar-form navbar-right"
-				style="padding-right: 50px;">
-				<div class="form-group">
-					<input type="text" class="form-control" name="mykey" placeholder="请输入关键词" />
-				</div>
-				<button type="submit" class="btn btn-default">搜索</button>
-			</form>
+	</nav>
+	
+	<!-- 商品分类导航栏 -->
+	<nav class="navbar navbar-categories navbar-fixed-top" role="navigation" style="top: 50px;">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#category-navbar">
+					<span class="sr-only">切换分类</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+			</div>
+			
+			<div class="collapse navbar-collapse" id="category-navbar">
+				<ul class="nav navbar-nav">
+					<li><a th:href="@{/}">🏠 首页</a></li>
+					<li th:each="gty:${goodsType}">
+						<a th:href="'?tid=' + ${gty.id}">
+							<span th:text="${gty.typename}"></span>
+						</a>
+					</li>
+				</ul>
+				
+				<form action="search" class="navbar-form navbar-right" role="search">
+					<div class="form-group">
+						<input type="text" class="form-control" name="mykey" 
+							   placeholder="🔍 搜索商品..." 
+							   style="width: 250px;" />
+					</div>
+					<button type="submit" class="btn btn-search">搜索</button>
+				</form>
+			</div>
 		</div>
-	</div>
+	</nav>
 </body>
 </html>
