--- a/src/main/resources/templates/user/searchResult.html
+++ b/src/main/resources/templates/user/searchResult.html
@@ -1,42 +1,77 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<base th:href="@{/}"><!-- 不用base就使用th:src="@{/js/jquery.min.js} -->
+<base th:href="@{/}">
 <meta charset="UTF-8">
-<title>主页</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>搜索结果 - eBusiness</title>
 <link rel="stylesheet" href="css/bootstrap.min.css" />
+<link rel="stylesheet" href="css/custom.css" />
 <script src="js/jquery.min.js"></script>
-<script type="text/javascript" th:inline="javascript">
-</script>
+<script src="js/bootstrap.min.js"></script>
 </head>
 <body>
 	<!-- 加载header.html -->
 	<div th:include="user/header"></div>
-	<div class="container">
-		<div>
-			<h4>搜索结果</h4>
+	
+	<div class="container" style="margin-top: 30px;">
+		<!-- 页面标题 -->
+		<div class="page-header" style="border-bottom: 3px solid #667eea; padding-bottom: 15px; margin-bottom: 30px;">
+			<h2 class="text-gradient" style="font-weight: 700; margin: 0;">
+				🔍 搜索结果
+			</h2>
+			<p style="color: #6C757D; margin-top: 10px; margin-bottom: 0;">
+				找到 <strong th:text="${#lists.size(searchgoods)}">0</strong> 件相关商品
+			</p>
 		</div>
+		
+		<!-- 商品卡片网格 -->
 		<div class="row">
-			<div class="col-xs-6 col-md-2" th:each="rGoods:${searchgoods}">
-				<a th:href="'goodsDetail?id=' + ${rGoods.id}" class="thumbnail"> <img
-					alt="100%x180" th:src="'images/' + ${rGoods.gpicture}"
-					style="height: 180px; width: 100%; display: block;">
-				</a>
-				<div class="caption" style="text-align: center;">
-					<div>
-						<span th:text="${rGoods.gname}"></span>
+			<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2" th:each="rGoods:${searchgoods}">
+				<div class="product-card">
+					<!-- 商品图片 -->
+					<a th:href="'goodsDetail?id=' + ${rGoods.id}" style="text-decoration: none;">
+						<div class="product-img-wrapper">
+							<img th:src="'images/' + ${rGoods.gpicture}" 
+								 alt="商品图片" 
+								 class="product-img">
+						</div>
+					</a>
+					
+					<!-- 商品信息 -->
+					<div class="product-info">
+						<a th:href="'goodsDetail?id=' + ${rGoods.id}" style="text-decoration: none;">
+							<h4 class="product-title" th:text="${rGoods.gname}">商品名称</h4>
+						</a>
+						
+						<!-- 价格信息 -->
+						<div class="product-price">
+							<span class="price-current">
+								¥<span th:text="${rGoods.grprice}">0</span>
+							</span>
+							<span class="price-original">
+								¥<span th:text="${rGoods.goprice}">0</span>
+							</span>
+						</div>
+						
+						<!-- 操作按钮 -->
+						<div class="product-actions">
+							<a th:href="'goodsDetail?id=' + ${rGoods.id}" 
+							   class="btn btn-custom-primary btn-sm btn-block">
+								查看详情
+							</a>
+						</div>
 					</div>
-					<div>
-						<span style="color: red;">&yen;
-							<span th:text="${rGoods.grprice}"></span>
-						</span>
-					<span class="text-dark" style="text-decoration: line-through;"> &yen;
-						<span th:text="${rGoods.goprice}"></span>
-					</span>
 				</div>
 			</div>
 		</div>
+		
+		<!-- 空状态提示 -->
+		<div class="empty-state" th:if="${#lists.isEmpty(searchgoods)}">
+			<div class="empty-state-icon">🔍</div>
+			<p class="empty-state-text">抱歉，没有找到相关商品</p>
+			<a href="/" class="btn btn-custom-primary">返回首页</a>
+		</div>
 	</div>
-</div>
 </body>
 </html>
